# kompello-web/app/lib/api/kompello/models/CustomFieldMetadata.ts
@@ -1,0 +1,90 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ModelTypeChoice } from './ModelTypeChoice';
+import {
+    ModelTypeChoiceFromJSON,
+    ModelTypeChoiceFromJSONTyped,
+    ModelTypeChoiceToJSON,
+    ModelTypeChoiceToJSONTyped,
+} from './ModelTypeChoice';
+import type { DataTypeChoice } from './DataTypeChoice';
+import {
+    DataTypeChoiceFromJSON,
+    DataTypeChoiceFromJSONTyped,
+    DataTypeChoiceToJSON,
+    DataTypeChoiceToJSONTyped,
+} from './DataTypeChoice';
+
+/**
+ * 
+ * @export
+ * @interface CustomFieldMetadata
+ */
+export interface CustomFieldMetadata {
+    /**
+     * 
+     * @type {Array<ModelTypeChoice>}
+     * @memberof CustomFieldMetadata
+     */
+    modelTypes: Array<ModelTypeChoice>;
+    /**
+     * 
+     * @type {Array<DataTypeChoice>}
+     * @memberof CustomFieldMetadata
+     */
+    dataTypes: Array<DataTypeChoice>;
+}
+
+/**
+ * Check if a given object implements the CustomFieldMetadata interface.
+ */
+export function instanceOfCustomFieldMetadata(value: object): value is CustomFieldMetadata {
+    if (!('modelTypes' in value) || value['modelTypes'] === undefined) return false;
+    if (!('dataTypes' in value) || value['dataTypes'] === undefined) return false;
+    return true;
+}
+
+export function CustomFieldMetadataFromJSON(json: any): CustomFieldMetadata {
+    return CustomFieldMetadataFromJSONTyped(json, false);
+}
+
+export function CustomFieldMetadataFromJSONTyped(json: any, ignoreDiscriminator: boolean): CustomFieldMetadata {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'modelTypes': ((json['model_types'] as Array<any>).map(ModelTypeChoiceFromJSON)),
+        'dataTypes': ((json['data_types'] as Array<any>).map(DataTypeChoiceFromJSON)),
+    };
+}
+
+export function CustomFieldMetadataToJSON(json: any): CustomFieldMetadata {
+    return CustomFieldMetadataToJSONTyped(json, false);
+}
+
+export function CustomFieldMetadataToJSONTyped(value?: CustomFieldMetadata | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'model_types': ((value['modelTypes'] as Array<any>).map(ModelTypeChoiceToJSON)),
+        'data_types': ((value['dataTypes'] as Array<any>).map(DataTypeChoiceToJSON)),
+    };
+}
+
