# kompello-web/app/lib/api/kompello/models/DataTypeChoice.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface DataTypeChoice
+ */
+export interface DataTypeChoice {
+    /**
+     * 
+     * @type {number}
+     * @memberof DataTypeChoice
+     */
+    value: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof DataTypeChoice
+     */
+    label: string;
+}
+
+/**
+ * Check if a given object implements the DataTypeChoice interface.
+ */
+export function instanceOfDataTypeChoice(value: object): value is DataTypeChoice {
+    if (!('value' in value) || value['value'] === undefined) return false;
+    if (!('label' in value) || value['label'] === undefined) return false;
+    return true;
+}
+
+export function DataTypeChoiceFromJSON(json: any): DataTypeChoice {
+    return DataTypeChoiceFromJSONTyped(json, false);
+}
+
+export function DataTypeChoiceFromJSONTyped(json: any, ignoreDiscriminator: boolean): DataTypeChoice {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'value': json['value'],
+        'label': json['label'],
+    };
+}
+
+export function DataTypeChoiceToJSON(json: any): DataTypeChoice {
+    return DataTypeChoiceToJSONTyped(json, false);
+}
+
+export function DataTypeChoiceToJSONTyped(value?: DataTypeChoice | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'value': value['value'],
+        'label': value['label'],
+    };
+}
+
