# kompello-web/app/lib/api/kompello/models/DataTypeEnum.ts
@@ -1,0 +1,56 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * * `1` - Text
+ * * `2` - Number
+ * * `3` - Boolean
+ * @export
+ */
+export const DataTypeEnum = {
+    NUMBER_1: 1,
+    NUMBER_2: 2,
+    NUMBER_3: 3
+} as const;
+export type DataTypeEnum = typeof DataTypeEnum[keyof typeof DataTypeEnum];
+
+
+export function instanceOfDataTypeEnum(value: any): boolean {
+    for (const key in DataTypeEnum) {
+        if (Object.prototype.hasOwnProperty.call(DataTypeEnum, key)) {
+            if (DataTypeEnum[key as keyof typeof DataTypeEnum] === value) {
+                return true;
+            }
+        }
+    }
+    return false;
+}
+
+export function DataTypeEnumFromJSON(json: any): DataTypeEnum {
+    return DataTypeEnumFromJSONTyped(json, false);
+}
+
+export function DataTypeEnumFromJSONTyped(json: any, ignoreDiscriminator: boolean): DataTypeEnum {
+    return json as DataTypeEnum;
+}
+
+export function DataTypeEnumToJSON(value?: DataTypeEnum | null): any {
+    return value as any;
+}
+
+export function DataTypeEnumToJSONTyped(value: any, ignoreDiscriminator: boolean): DataTypeEnum {
+    return value as DataTypeEnum;
+}
+
