# kompello-web/app/lib/api/kompello/models/ModelTypeChoice.ts
@@ -1,0 +1,84 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ModelTypeChoice
+ */
+export interface ModelTypeChoice {
+    /**
+     * 
+     * @type {number}
+     * @memberof ModelTypeChoice
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelTypeChoice
+     */
+    appLabel: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelTypeChoice
+     */
+    model: string;
+}
+
+/**
+ * Check if a given object implements the ModelTypeChoice interface.
+ */
+export function instanceOfModelTypeChoice(value: object): value is ModelTypeChoice {
+    if (!('id' in value) || value['id'] === undefined) return false;
+    if (!('appLabel' in value) || value['appLabel'] === undefined) return false;
+    if (!('model' in value) || value['model'] === undefined) return false;
+    return true;
+}
+
+export function ModelTypeChoiceFromJSON(json: any): ModelTypeChoice {
+    return ModelTypeChoiceFromJSONTyped(json, false);
+}
+
+export function ModelTypeChoiceFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelTypeChoice {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'appLabel': json['app_label'],
+        'model': json['model'],
+    };
+}
+
+export function ModelTypeChoiceToJSON(json: any): ModelTypeChoice {
+    return ModelTypeChoiceToJSONTyped(json, false);
+}
+
+export function ModelTypeChoiceToJSONTyped(value?: ModelTypeChoice | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'app_label': value['appLabel'],
+        'model': value['model'],
+    };
+}
+
