# kompello-web/app/lib/api/kompello/models/PatchedCustomFieldDefinition.ts
@@ -1,0 +1,160 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { DataTypeEnum } from './DataTypeEnum';
+import {
+    DataTypeEnumFromJSON,
+    DataTypeEnumFromJSONTyped,
+    DataTypeEnumToJSON,
+    DataTypeEnumToJSONTyped,
+} from './DataTypeEnum';
+
+/**
+ * 
+ * @export
+ * @interface PatchedCustomFieldDefinition
+ */
+export interface PatchedCustomFieldDefinition {
+    /**
+     * 
+     * @type {string}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    readonly uuid?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    key?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    name?: string;
+    /**
+     * 
+     * @type {DataTypeEnum}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    dataType?: DataTypeEnum;
+    /**
+     * 
+     * @type {number}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    modelType?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    company?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    trackHistory?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    isArchived?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    showInUi?: boolean;
+    /**
+     * 
+     * @type {any}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    extraData?: any | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    readonly createdOn?: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof PatchedCustomFieldDefinition
+     */
+    readonly modifiedOn?: Date;
+}
+
+
+
+/**
+ * Check if a given object implements the PatchedCustomFieldDefinition interface.
+ */
+export function instanceOfPatchedCustomFieldDefinition(value: object): value is PatchedCustomFieldDefinition {
+    return true;
+}
+
+export function PatchedCustomFieldDefinitionFromJSON(json: any): PatchedCustomFieldDefinition {
+    return PatchedCustomFieldDefinitionFromJSONTyped(json, false);
+}
+
+export function PatchedCustomFieldDefinitionFromJSONTyped(json: any, ignoreDiscriminator: boolean): PatchedCustomFieldDefinition {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'uuid': json['uuid'] == null ? undefined : json['uuid'],
+        'key': json['key'] == null ? undefined : json['key'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'dataType': json['data_type'] == null ? undefined : DataTypeEnumFromJSON(json['data_type']),
+        'modelType': json['model_type'] == null ? undefined : json['model_type'],
+        'company': json['company'] == null ? undefined : json['company'],
+        'trackHistory': json['track_history'] == null ? undefined : json['track_history'],
+        'isArchived': json['is_archived'] == null ? undefined : json['is_archived'],
+        'showInUi': json['show_in_ui'] == null ? undefined : json['show_in_ui'],
+        'extraData': json['extra_data'] == null ? undefined : json['extra_data'],
+        'createdOn': json['created_on'] == null ? undefined : (new Date(json['created_on'])),
+        'modifiedOn': json['modified_on'] == null ? undefined : (new Date(json['modified_on'])),
+    };
+}
+
+export function PatchedCustomFieldDefinitionToJSON(json: any): PatchedCustomFieldDefinition {
+    return PatchedCustomFieldDefinitionToJSONTyped(json, false);
+}
+
+export function PatchedCustomFieldDefinitionToJSONTyped(value?: Omit<PatchedCustomFieldDefinition, 'uuid'|'created_on'|'modified_on'> | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'key': value['key'],
+        'name': value['name'],
+        'data_type': DataTypeEnumToJSON(value['dataType']),
+        'model_type': value['modelType'],
+        'company': value['company'],
+        'track_history': value['trackHistory'],
+        'is_archived': value['isArchived'],
+        'show_in_ui': value['showInUi'],
+        'extra_data': value['extraData'],
+    };
+}
+
