# kompello-web/app/lib/api/kompello/models/index.ts
@@ -4,13 +4,19 @@ export * from './Address';
 export * from './Company';
 export * from './Csrf';
 export * from './Currency';
+export * from './CustomFieldDefinition';
+export * from './CustomFieldMetadata';
 export * from './Customer';
 export * from './CustomerList';
+export * from './DataTypeChoice';
+export * from './DataTypeEnum';
 export * from './Item';
 export * from './ItemList';
+export * from './ModelTypeChoice';
 export * from './Password';
 export * from './PatchedCompany';
 export * from './PatchedCurrency';
+export * from './PatchedCustomFieldDefinition';
 export * from './PatchedCustomer';
 export * from './PatchedItem';
 export * from './PatchedUnit';
